--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 #canvas1 {
+    font-family: 'Bangers', cursive;
     border: 5px solid black;
     position: absolute;
     top: 50%;
@@ -15,6 +16,6 @@
     max-height: 100%;
 }
 
-#layer1, #layer2, #layer3, #layer4, #player, #angler1, #angler2, #lucky {
+#layer1, #layer2, #layer3, #layer4, #player, #angler1, #angler2, #lucky, #projectile {
     display: none;
 }
